--- a/pwacam-project/public/manifest.json
+++ b/pwacam-project/public/manifest.json
@@ -1,4 +1,5 @@
 {
+  "author": "Eduardo Lima",
   "name": "Instagram lookalike as Progressive Web App",
   "short_name": "PWA Gram",
   "start_url": "./index.html",
