--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,10 @@
     {
       "type": "pwa-chrome",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
+      "name": "Debug localhost",
       "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}"
+      "preLaunchTask": "npm: start - pwacam-project",
+      "webRoot": "${workspaceFolder/pwacam-project}"
     }
   ]
 }
